<resources>
    <string name="app_name">CarGuru</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_questionnaire">Questionnaire</string>
    <string name="app_explanation">This Application was created for you to easily find what car is best for you! You are also able to view all the available information about specific vehicle’s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggestion">Suggestion</string>
    <string name="search_button">Search</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>

</resources>