<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Garage.UserAuthentication.UserLoginFragment" >

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="364dp"
        android:layout_height="55dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="358dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="25dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="145dp"
        android:layout_height="27dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="93dp"
        android:layout_height="25dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="34dp"
        android:text="@string/register"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>